# PE-Hackathon-2026

./: .coverage  .env.example  .gitignore  DEMO.md  Dockerfile  README.md  SUBMIT.md  docker-compose.yml  dump.rdb  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  cache.py  database.py  logging_config.py
app/routes/: api.py
app/static/: dashboard.css  dashboard.js
app/templates/: dashboard.html
docs/: DECISIONS.md  DEPLOY.md  ERROR_HANDLING.md  FAILURE_MODES.md  TROUBLESHOOTING.md
loadtests/: locustfile.py
logs/: app.log.1  app.log.2
monitoring/alertmanager/: alertmanager.yml  docker-entrypoint.sh
monitoring/grafana/dashboards/: app.json
nginx/: nginx.conf
tests/: conftest.py  test_api_integration.py  test_cache.py  test_extended.py  test_graceful_errors.py  test_health.py  test_integration_shorten.py  test_observability.py
