[project]
name = "mlh-pe-hackathon"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "faker>=33.0",
    "flask>=3.1",
    "gunicorn>=23.0",
    "peewee>=3.17",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "psutil>=6.0",
    "python-json-logger>=3.0",
    "prometheus-client>=0.20",
]

[dependency-groups]
dev = [
    "fakeredis>=2.23",
    "locust>=2.32",
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "redis>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]
omit = ["app/models/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 70
